Added homespan, optimize codebase

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+build_flags = -Os -flto
 lib_deps =
     ArduinoJson
+    HomeSpan
