HomeKit compatibility and todo items

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,9 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_flags = -Os -flto
+build_flags = -Os
+board_build.partitions = huge_app.csv
+
 lib_deps =
     ArduinoJson
     HomeSpan
